<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="17sp"
        android:textColor="@color/primaryTextColor"
        android:inputType="text"
        android:hint="@string/hint_edit_text"
        android:autofillHints="@string/hint_edit_text"
        app:layout_constraintTop_toTopOf="@+id/enter_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/enter_btn"
        app:layout_constraintRight_toLeftOf="@+id/enter_btn"/>
    <Button
        android:id="@+id/enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter"
        android:textSize="15sp"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text"
        app:layout_constraintBottom_toTopOf="@+id/left_items_num"/>
    <TextView
        android:id="@+id/left_items_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/all_btn" />
    <TextView
        android:id="@+id/left_items"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/items_left"
        android:textSize="15sp"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toTopOf="@+id/left_items_num"
        app:layout_constraintLeft_toRightOf="@+id/left_items_num"
        app:layout_constraintBottom_toBottomOf="@+id/left_items_num"/>
    <Button
        android:id="@+id/all_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textSize="15sp"
        android:textColor="@color/secondaryTextColor"
        android:background="@drawable/btn_normal"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/active_btn"/>
    <Button
        android:id="@+id/active_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:textSize="15sp"
        android:textColor="@color/secondaryTextColor"
        android:background="@drawable/btn_normal"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/all_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/completed_btn"/>
    <Button
        android:id="@+id/completed_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textSize="15sp"
        android:textColor="@color/secondaryTextColor"
        android:background="@drawable/btn_normal"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/active_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/clear_completed_btn"/>
    <Button
        android:id="@+id/clear_completed_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_completed"
        android:textSize="13sp"
        android:textColor="@color/secondaryTextColor"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/completed_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>